--- a/backend-parlour-api/.env
+++ b/backend-parlour-api/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/parlour
+MONGO_URI=mongodb+srv://anukrati240:@cluster0.7j6mivz.mongodb.net/?2CcTv4fcfKZ6XFwNretryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret
